@@ -235,7 +235,8 @@ public class MergeServiceImpl implements MergeService {
             (srcId, personPublicationIndex) -> performPersonPublicationSwitch(srcId, targetPersonId,
                 personPublicationIndex.getDatabaseId(), true),
             pageRequest -> documentPublicationService.findResearcherPublications(sourcePersonId,
-                Collections.emptyList(),
+                Collections.emptyList(), List.of("*"),
+                Arrays.asList(DocumentPublicationType.values()),
                 pageRequest).getContent()
         );
     }
@@ -853,7 +854,7 @@ public class MergeServiceImpl implements MergeService {
                                    BiConsumer<Integer, T> switchOperation,
                                    Function<PageRequest, List<T>> fetchChunk) {
         var pageNumber = 0;
-        var chunkSize = 10;
+        var chunkSize = 100;
         var hasNextPage = true;
 
         while (hasNextPage) {
